--- a/css/estilos.css
+++ b/css/estilos.css
@@ -32,6 +32,14 @@ body
 
 }
 
+.center
+{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;    
+}
+
 #container
 {
     width: 70%;
